Improve Handling of Absolute, Relative, and Non-Literal URLs in URL Migration (#678)
* added new recipe to add a new convert uri method.

* Apply suggestions from code review

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

* Ran formatter

* Fix tests

* Update logic

* Update string literal check

* Update list

* add test

* Fix test

* Get constant value

* Polish pre condition handling

---------

Co-authored-by: KARTHIK NOUSHER <karthiknousher@ibm.com>
Co-authored-by: Tim te Beek <timtebeek@gmail.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Ralph-Sanders <ralph.sanders@ibm.com>
Co-authored-by: Merlin Bögershausen <merlin.boegershausen@rwth-aachen.de>