@@ -26,7 +26,7 @@ import static org.openrewrite.java.Assertions.java;
 class URLConstructorsToURITest implements RewriteTest {
     @Override
     public void defaults(RecipeSpec spec) {
-        spec.recipe(new URLConstructorsToURIRecipes());
+        spec.recipe(new URLConstructorsToURI());
     }
 
     @Test
@@ -53,9 +53,154 @@ class URLConstructorsToURITest implements RewriteTest {
 
               class Test {
                   void urlConstructor(String spec) throws Exception {
-                      URL url1 = URI.create(spec).toURL();
+                      URL url1 = new URL(spec);
                       URL url2 = new URI(spec, null, "localhost", -1, "file", null, null).toURL();
                       URL url3 = new URI(spec, null, "localhost", 8080, "file", null, null).toURL();
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/620")
+    void urlCheckAbsolutePath() {
+        rewriteRun(
+          //language=java
+          java(
+            """
+              import java.net.URL;
+
+              class Test {
+                  void urlConstructor() {
+                      URL url1 = new URL("https://test.com");
+                  }
+              }
+              """,
+            """
+              import java.net.URI;
+              import java.net.URL;
+
+              class Test {
+                  void urlConstructor() {
+                      URL url1 = URI.create("https://test.com").toURL();
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/620")
+    void urlCheckConstantAbsolutePath() {
+        rewriteRun(
+          //language=java
+          java(
+            """
+              import java.net.URL;
+
+              class Test {
+                  private String goodURL = "https://test.com";
+                  private String badURL = "not/valid/url";
+                  void urlConstructor() {
+                      URL url1 = new URL(goodURL);
+                  }
+              }
+              """,
+            """
+              import java.net.URI;
+              import java.net.URL;
+
+              class Test {
+                  private String goodURL = "https://test.com";
+                  private String badURL = "not/valid/url";
+                  void urlConstructor() {
+                      URL url1 = URI.create(goodURL).toURL();
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/620")
+    void urlCheckConstantRelativePath() {
+        rewriteRun(
+          //language=java
+          java(
+            """
+              import java.net.URL;
+
+              class Test {
+                  private String goodURL = "https://test.com";
+                  private String badURL = "not/valid/url";
+                  void urlConstructor() {
+                      URL url1 = new URL(badURL);
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/620")
+    void urlCheckRelativePath() {
+        rewriteRun(
+          spec -> spec.expectedCyclesThatMakeChanges(0),
+          //language=java
+          java(
+            """
+              import java.net.URL;
+
+              class Test {
+                  void urlConstructor() {
+                      URL url1 = new URL("TEST-INF/test/testCase.wsdl");
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/620")
+    void urlCheckNullPath() {
+        rewriteRun(
+          //language=java
+          java(
+            """
+              import java.net.URL;
+
+              class Test {
+                  void urlConstructor() {
+                      URL url1 = new URL(null);
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/620")
+    void urlCheckMethodInvocationParameter() {
+        rewriteRun(
+          //language=java
+          java(
+            """
+              import java.net.URL;
+
+              class Test {
+                  void urlConstructor(String spec) throws Exception {
+                      URL url1 = new URL(getString());
+                  }
+
+                  String getString() {
+                      return "myURL";
                   }
               }
               """
